src/test/ui/builtin-superkinds/builtin-superkinds-double-superkind.stderr
error[E0277]: `T` cannot be sent between threads safely
  --> $DIR/builtin-superkinds-double-superkind.rs:6:24
   |
LL | impl <T: Sync+'static> Foo for (T,) { }
   |       --               ^^^ `T` cannot be sent between threads safely
   |       |
   |       help: consider further restricting this bound: `T: std::marker::Send +`
   |
   = help: within `(T,)`, the trait `std::marker::Send` is not implemented for `T`
   = note: required because it appears within the type `(T,)`

error[E0277]: `T` cannot be shared between threads safely
  --> $DIR/builtin-superkinds-double-superkind.rs:9:16
   |
LL | impl <T: Send> Foo for (T,T) { }
   |       --       ^^^ `T` cannot be shared between threads safely
   |       |
   |       help: consider further restricting this bound: `T: std::marker::Sync +`
   |
   = help: within `(T, T)`, the trait `std::marker::Sync` is not implemented for `T`
   = note: required because it appears within the type `(T, T)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
